fix(global) => resolve RTL scrollbar-induced layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-y: scroll;
   -webkit-text-size-adjust: 100%;
 }
 
@@ -23,7 +24,7 @@ body {
   text-rendering: optimizeLegibility;
   min-height: 100vh;
   max-width: 100vw;
-  overflow-x: clip;
+  overflow-x: hidden;
 }
 
 /* Scrollbar */
